--- a/angular-12-crud/src/app/app.component.html
+++ b/angular-12-crud/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div>
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand"> Noureddine</a>
+    
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
         <a routerLink="tutorials" class="nav-link">List of tutorials</a>
       </li>
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="add" class="nav-link">Add new tutorial</a>
       </li>
     </div>
     </nav>
