--- a/angular-12-crud/src/app/components/add-tutorial/add-tutorial.component.html
+++ b/angular-12-crud/src/app/components/add-tutorial/add-tutorial.component.html
@@ -2,6 +2,7 @@
   <div class="submit-form">
     <div *ngIf="!submitted">
       <div class="form-group">
+        <h1 class="text-center">Create new tutorial</h1>
         <label for="title">Title</label>
         <input
           type="text"
@@ -22,9 +23,9 @@
           [(ngModel)]="tutorial.description"
           name="description"
         />
-      </div>
-
-      <button (click)="saveTutorial()" class="btn btn-success">Submit</button>
+      </div> 
+      <button (click)="save()" class="btn btn-success">Save</button>
+      <button routerLink="" class="btn btn-info" >Back</button>
     </div>
 
     <div *ngIf="submitted">
